Fixing more spacing issues

--- a/styles.css
+++ b/styles.css
@@ -439,25 +439,16 @@ svg {
 
 #tech-container, 
 #more-about-me-container {
-    height: 52vh;
     background-color: #F5F5F7;
     margin-left: var(--margin-side);
     margin-right: var(--margin-side);
     display: flex;
     flex-direction: column;
-    border-radius: 17px;
+    border-radius: 16px;
 }
 
 #more-about-me-container {
     flex-direction: row;
-}
-
-@media (max-width: 1000px) {
-    #tech-container, 
-    #more-about-me-container {
-        border-radius: 15px;
-        height: 48vh;
-    }
 }
 
 #tech-stack-title, 
@@ -568,11 +559,6 @@ svg {
 }
 
 @media (max-width: 700px) {
-    #tech-container, 
-    #more-about-me-container {
-        height: 43vh;
-    }
-
     .text-button,
     .separator {
         font-size: 12px;
@@ -591,13 +577,6 @@ svg {
     #mam-paragraph {
         margin-top: 1vh;
         margin-bottom: 5vh;
-    }
-}
-
-@media (max-width: 335px) {
-    #tech-container, 
-    #more-about-me-container {
-        height: 46vh;
     }
 }
 
@@ -651,7 +630,6 @@ svg {
 
 .project {
     margin-top: 5vh;
-    height: 60vh;
     width: 100%;
     background-color: #F5F5F7;
     display: flex;
@@ -760,61 +738,13 @@ svg {
 
 @media (max-width: 1300px) {
     .project {
-        height: 110vh;
         flex-direction: column;
     }
 
     .project-right {
         align-self: center;
         margin-left: var(--margin-side);
-    }
-}
-
-@media (max-width: 1200px) {
-    .project {
-        height: 105vh;
-    }
-}
-
-@media (max-width: 1100px) {
-    .project {
-        height: 100vh;
-    }
-}
-
-@media (max-width: 1000px) {
-    .project {
-        height: 95vh;
-    }
-}
-
-@media (max-width: 900px) {
-    .project {
-        height: 90vh;
-    }
-}
-
-@media (max-width: 800px) {
-    .project {
-        height: 87.5vh;
-    }
-}
-
-@media (max-width: 725px) {
-    .project {
-        height: 82.5vh;
-    }
-}
-
-@media (max-width: 550px) {
-    .project {
-        height: 80vh;
-    }
-}
-
-@media (max-width: 450px) {
-    .project {
-        height: 75vh;
+        margin-bottom: 7vh;
     }
 }
 
